[project]
name = "clinicaltriage-env"
version = "0.1.0"
description = "OpenEnv-compatible ESI patient triage RL benchmark"
requires-python = ">=3.11"
dependencies = [
    "openenv-core>=0.1.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "pydantic>=2.0.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "websockets>=12.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
eval = ["pandas>=2.0.0"]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0", "httpx>=0.27.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
server = "server.app:main"
clinicaltriage-env = "server.app:main"
clinicaltriage-benchmark = "eval.benchmark:main"

[tool.hatch.build.targets.wheel]
packages = ["server", "eval", "tasks"]

[tool.hatch.build]
include = [
  "server/",
  "eval/",
  "tasks/",
  "models.py",
  "rubrics.py",
  "environment.py",
  "runner.py",
  "client.py",
  "patch.py",
  "tasks.py",
  "inference.py",
]
exclude = [
  "venv/",
  ".venv/",
  "tests/",
  "__pycache__/",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
